--- a/style.css
+++ b/style.css
@@ -8,13 +8,18 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
+    align-items: center;
     justify-content: center;
-    background-image: url(/Fundo.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+}
+
+.fundo {
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .container {
+    position: relative;
     width: 100%;
     margin-top: 10rem;
     display: flex;
