--- a/style.css
+++ b/style.css
@@ -10,16 +10,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.fundo {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    background-image: url(/Fundo.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
-    position: relative;
     width: 100%;
     margin-top: 10rem;
     display: flex;
