--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     background-color: #E8C547;
     padding: .5rem;
     border-radius: 10px;
-    margin-bottom: 8rem;
+    margin-bottom: 2rem;
 }
 
 .menu-links {
@@ -39,19 +39,20 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 4rem;
+    gap: 3rem;
     padding: 2rem;
 }
 
 .menu-links a {
     display: inline-block;
     text-decoration: none;
-    background-color: #E8C547;
+    background-color: transparent;
+    border: 2px solid #E8C547;
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     text-transform: uppercase;
-    color: #30323D;
+    color: #E8C547;
     width: 25em;
     text-align: center;
     padding: 10px 15px;
